new svg+ new elements main page

--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
                     </div>
                     <div class="food__item__size">
                         <ul>
-                            <li><a href="#">Маленькая</a></li>
+                            <li class="active"><a href="#">Маленькая</a></li>
                             <li><a href="#">Средняя</a></li>
                             <li><a href="#">Большая</a></li>
                         </ul>
@@ -54,7 +54,7 @@
                     </div>
                     <div class="food__item__size">
                         <ul>
-                            <li><a href="#">Маленькая</a></li>
+                            <li class="active"><a href="#">Маленькая</a></li>
                             <li><a href="#">Средняя</a></li>
                             <li><a href="#">Большая</a></li>
                         </ul>
@@ -89,7 +89,7 @@
                     </div>
                     <div class="food__item__size">
                         <ul>
-                            <li><a href="#">Маленькая</a></li>
+                            <li class="active"><a href="#">Маленькая</a></li>
                             <li><a href="#">Средняя</a></li>
                             <li><a href="#">Большая</a></li>
                         </ul>
@@ -129,7 +129,7 @@
                     </div>
                     <div class="food__item__size">
                         <ul>
-                            <li><a href="#">Маленькая</a></li>
+                            <li class="active"><a href="#">Маленькая</a></li>
                             <li><a href="#">Средняя</a></li>
                             <li><a href="#">Большая</a></li>
                         </ul>
@@ -164,7 +164,7 @@
                     </div>
                     <div class="food__item__size">
                         <ul>
-                            <li><a href="#">Маленькая</a></li>
+                            <li class="active"><a href="#">Маленькая</a></li>
                             <li><a href="#">Средняя</a></li>
                             <li><a href="#">Большая</a></li>
                         </ul>
@@ -199,7 +199,7 @@
                     </div>
                     <div class="food__item__size">
                         <ul>
-                            <li><a href="#">Маленькая</a></li>
+                            <li class="active"><a href="#">Маленькая</a></li>
                             <li><a href="#">Средняя</a></li>
                             <li><a href="#">Большая</a></li>
                         </ul>
@@ -234,7 +234,7 @@
                     </div>
                     <div class="food__item__size">
                         <ul>
-                            <li><a href="#">Маленькая</a></li>
+                            <li class="active"><a href="#">Маленькая</a></li>
                             <li><a href="#">Средняя</a></li>
                             <li><a href="#">Большая</a></li>
                         </ul>
@@ -269,7 +269,7 @@
                     </div>
                     <div class="food__item__size">
                         <ul>
-                            <li><a href="#">Маленькая</a></li>
+                            <li class="active"><a href="#">Маленькая</a></li>
                             <li><a href="#">Средняя</a></li>
                             <li><a href="#">Большая</a></li>
                         </ul>
@@ -304,7 +304,7 @@
                     </div>
                     <div class="food__item__size">
                         <ul>
-                            <li><a href="#">Маленькая</a></li>
+                            <li class="active"><a href="#">Маленькая</a></li>
                             <li><a href="#">Средняя</a></li>
                             <li><a href="#">Большая</a></li>
                         </ul>
@@ -339,7 +339,7 @@
                     </div>
                     <div class="food__item__size">
                         <ul>
-                            <li><a href="#">Маленькая</a></li>
+                            <li class="active"><a href="#">Маленькая</a></li>
                             <li><a href="#">Средняя</a></li>
                             <li><a href="#">Большая</a></li>
                         </ul>
@@ -374,7 +374,7 @@
                     </div>
                     <div class="food__item__size">
                         <ul>
-                            <li><a href="#">Маленькая</a></li>
+                            <li class="active"><a href="#">Маленькая</a></li>
                             <li><a href="#">Средняя</a></li>
                             <li><a href="#">Большая</a></li>
                         </ul>
@@ -409,7 +409,7 @@
                     </div>
                     <div class="food__item__size">
                         <ul>
-                            <li><a href="#">Маленькая</a></li>
+                            <li class="active"><a href="#">Маленькая</a></li>
                             <li><a href="#">Средняя</a></li>
                             <li><a href="#">Большая</a></li>
                         </ul>
