--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
      <title>Main page</title>
      <link href="https://file.myfontastic.com/dSoF5fhfrXeL4z9sKKEJJV/icons.css" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
       <link rel="stylesheet" href="/static/css/app.css" type="text/css"/>
 </head>
 <body>
@@ -12,7 +13,7 @@
             <div class="row v-middle">
                 <div class="col-lg-3 col-xl-3">
                     <a href="#city-select" class="select-city-link">Москва</a>
-                    <img src="./assets/images/logo.png" alt="logo"/>
+                    <img src="./assets/images/logo.svg" alt="logo"/>
                 </div>
                 <div class="col-lg-4 col-xl-4">
                     <div class="phone">
@@ -52,8 +53,8 @@
 </section>
 <section id="mainnavbar">
     <div class="container">
-        <div class="row">
-            <div class="col-lg-10 col-xl-10">
+        <div class="row v-middle">
+            <div class="col-lg-9 col-xl-9">
                 <nav>
                     <ul>
                         <li><a href="#">Бургеры</a></li>
@@ -67,8 +68,9 @@
                     </ul>
                 </nav>
             </div>
-            <div class="col-lg-2 col-xl-2">
+            <div class="col-lg-3 col-xl-3">
                 <div class="filter">
+                    <button class="btn btn-slim filter-btn">Фильтр</button>
                     <ul>
                         <li><a href="#">Вегетарианцам</a></li>
                         <li><a href="#">С рыбой</a></li>
@@ -78,7 +80,10 @@
                         <li><a href="#">С морепродуктами</a></li>
                     </ul>
                 </div>
-                <input type="text" value="Поиск"/>
+                <div class="search-input">
+                    <input type="text" value="Поиск" />
+                </div>
+
             </div>
         </div>
 
@@ -96,7 +101,7 @@
                     </div>
                     <div class="food__item__size">
                         <ul>
-                            <li><a href="#">Маленькая</a></li>
+                            <li class="active"><a href="#">Маленькая</a></li>
                             <li><a href="#">Средняя</a></li>
                             <li><a href="#">Большая</a></li>
                         </ul>
@@ -131,7 +136,7 @@
                     </div>
                     <div class="food__item__size">
                         <ul>
-                            <li><a href="#">Маленькая</a></li>
+                            <li class="active"><a href="#">Маленькая</a></li>
                             <li><a href="#">Средняя</a></li>
                             <li><a href="#">Большая</a></li>
                         </ul>
@@ -166,7 +171,7 @@
                     </div>
                     <div class="food__item__size">
                         <ul>
-                            <li><a href="#">Маленькая</a></li>
+                            <li class="active"><a href="#">Маленькая</a></li>
                             <li><a href="#">Средняя</a></li>
                             <li><a href="#">Большая</a></li>
                         </ul>
@@ -206,7 +211,7 @@
                     </div>
                     <div class="food__item__size">
                         <ul>
-                            <li><a href="#">Маленькая</a></li>
+                            <li class="active"><a href="#">Маленькая</a></li>
                             <li><a href="#">Средняя</a></li>
                             <li><a href="#">Большая</a></li>
                         </ul>
@@ -241,7 +246,7 @@
                     </div>
                     <div class="food__item__size">
                         <ul>
-                            <li><a href="#">Маленькая</a></li>
+                            <li class="active"><a href="#">Маленькая</a></li>
                             <li><a href="#">Средняя</a></li>
                             <li><a href="#">Большая</a></li>
                         </ul>
@@ -276,7 +281,7 @@
                     </div>
                     <div class="food__item__size">
                         <ul>
-                            <li><a href="#">Маленькая</a></li>
+                            <li class="active"><a href="#">Маленькая</a></li>
                             <li><a href="#">Средняя</a></li>
                             <li><a href="#">Большая</a></li>
                         </ul>
@@ -311,7 +316,7 @@
                     </div>
                     <div class="food__item__size">
                         <ul>
-                            <li><a href="#">Маленькая</a></li>
+                            <li class="active"><a href="#">Маленькая</a></li>
                             <li><a href="#">Средняя</a></li>
                             <li><a href="#">Большая</a></li>
                         </ul>
@@ -346,7 +351,7 @@
                     </div>
                     <div class="food__item__size">
                         <ul>
-                            <li><a href="#">Маленькая</a></li>
+                            <li class="active"><a href="#">Маленькая</a></li>
                             <li><a href="#">Средняя</a></li>
                             <li><a href="#">Большая</a></li>
                         </ul>
@@ -381,7 +386,7 @@
                     </div>
                     <div class="food__item__size">
                         <ul>
-                            <li><a href="#">Маленькая</a></li>
+                            <li class="active"><a href="#">Маленькая</a></li>
                             <li><a href="#">Средняя</a></li>
                             <li><a href="#">Большая</a></li>
                         </ul>
@@ -416,7 +421,7 @@
                     </div>
                     <div class="food__item__size">
                         <ul>
-                            <li><a href="#">Маленькая</a></li>
+                            <li class="active"><a href="#">Маленькая</a></li>
                             <li><a href="#">Средняя</a></li>
                             <li><a href="#">Большая</a></li>
                         </ul>
@@ -451,7 +456,7 @@
                     </div>
                     <div class="food__item__size">
                         <ul>
-                            <li><a href="#">Маленькая</a></li>
+                            <li class="active"><a href="#">Маленькая</a></li>
                             <li><a href="#">Средняя</a></li>
                             <li><a href="#">Большая</a></li>
                         </ul>
@@ -486,7 +491,7 @@
                     </div>
                     <div class="food__item__size">
                         <ul>
-                            <li><a href="#">Маленькая</a></li>
+                            <li class="active"><a href="#">Маленькая</a></li>
                             <li><a href="#">Средняя</a></li>
                             <li><a href="#">Большая</a></li>
                         </ul>
@@ -539,13 +544,13 @@
         <div class="container">
             <div class="row v-middle">
                 <div class="col-lg-2 col-xl-2">
-                    <img src="./assets/images/logo-words.png" alt="logo" class="img-fluid"/>
+                    <img src="./assets/images/logo-words.svg" alt="logo" class="img-fluid"/>
                 </div>
                 <div class="col-lg-7 col-xl-7 text-center">
                     © 2017 Burger & Pizzoni. All Right Recived.
                 </div>
                 <div class="col-lg-2 col-xl-2 text-right">
-                    <img src="./assets/images/fcg.png" alt="logo" class="img-fluid"/>
+                    <img src="./assets/images/fcg.svg" alt="logo" class="img-fluid"/>
 
                 </div>
                 <div class="col-lg-1 col-xl-1">
