cart page++ + ui elements

--- a/app/index.html
+++ b/app/index.html
@@ -17,14 +17,14 @@
                     <div class="food__item__ingredients">Бифштекс, лук, помидор, салат латук,
                         помидор, бифштекс, лук.
                     </div>
-                    <div class="food__item__size">
+                    <div class="ui-control-foodsize">
                         <ul>
                             <li class="active"><a href="#">Маленькая</a></li>
                             <li><a href="#">Средняя</a></li>
                             <li><a href="#">Большая</a></li>
                         </ul>
                     </div>
-                     <div class="food__item__controls row">
+                     <div class="ui-controls-ingred row">
                         <div class="col-sm-6"><a href="#" class="add-to-dish btn"><i class="icon-plus-circled"></i>Добавить в блюдо</a></div>
 
                         <div class="col-sm-6"> <a href="#" class="remove-from-dish btn"><i class="icon-minus-circled"></i>Убрать из блюда</a></div>
@@ -52,14 +52,14 @@
                     <div class="food__item__ingredients">Бифштекс, лук, помидор, салат латук,
                         помидор, бифштекс, лук.
                     </div>
-                    <div class="food__item__size">
+                    <div class="ui-control-foodsize">
                         <ul>
                             <li class="active"><a href="#">Маленькая</a></li>
                             <li><a href="#">Средняя</a></li>
                             <li><a href="#">Большая</a></li>
                         </ul>
                     </div>
-                     <div class="food__item__controls row">
+                     <div class="ui-controls-ingred row">
                         <div class="col-sm-6"><a href="#" class="add-to-dish btn"><i class="icon-plus-circled"></i>Добавить в блюдо</a></div>
 
                         <div class="col-sm-6"> <a href="#" class="remove-from-dish btn"><i class="icon-minus-circled"></i>Убрать из блюда</a></div>
@@ -87,14 +87,14 @@
                     <div class="food__item__ingredients">Бифштекс, лук, помидор, салат латук,
                         помидор, бифштекс, лук.
                     </div>
-                    <div class="food__item__size">
+                    <div class="ui-control-foodsize">
                         <ul>
                             <li class="active"><a href="#">Маленькая</a></li>
                             <li><a href="#">Средняя</a></li>
                             <li><a href="#">Большая</a></li>
                         </ul>
                     </div>
-                     <div class="food__item__controls row">
+                     <div class="ui-controls-ingred row">
                         <div class="col-sm-6"><a href="#" class="add-to-dish btn"><i class="icon-plus-circled"></i>Добавить в блюдо</a></div>
 
                         <div class="col-sm-6"> <a href="#" class="remove-from-dish btn"><i class="icon-minus-circled"></i>Убрать из блюда</a></div>
@@ -110,9 +110,9 @@
                             </div>
                             <div class="col-lg-5 col-xl-5 padding0 text-right">
                                 <button class="food__item__btn btn btn-add-to-cart hide">В корзину</button>
-                                <div class="food__item__amount">
+                                <div class="food__item__amount ui-amount-control">
                                     <button class="minus-one-btn"><i class="icon-minus"></i></button>
-                                    <span class="food__item__amount__value">1</span>
+                                    <span class="ui-amount-control__value">1</span>
                                     <button class="plus-one-btn"><i class="icon-plus"></i></button>
                                 </div>
                             </div>
@@ -127,14 +127,14 @@
                     <div class="food__item__ingredients">Бифштекс, лук, помидор, салат латук,
                         помидор, бифштекс, лук.
                     </div>
-                    <div class="food__item__size">
+                    <div class="ui-control-foodsize">
                         <ul>
                             <li class="active"><a href="#">Маленькая</a></li>
                             <li><a href="#">Средняя</a></li>
                             <li><a href="#">Большая</a></li>
                         </ul>
                     </div>
-                     <div class="food__item__controls row">
+                     <div class="ui-controls-ingred row">
                         <div class="col-sm-6"><a href="#" class="add-to-dish btn"><i class="icon-plus-circled"></i>Добавить в блюдо</a></div>
 
                         <div class="col-sm-6"> <a href="#" class="remove-from-dish btn"><i class="icon-minus-circled"></i>Убрать из блюда</a></div>
@@ -162,14 +162,14 @@
                     <div class="food__item__ingredients">Бифштекс, лук, помидор, салат латук,
                         помидор, бифштекс, лук.
                     </div>
-                    <div class="food__item__size">
+                    <div class="ui-control-foodsize">
                         <ul>
                             <li class="active"><a href="#">Маленькая</a></li>
                             <li><a href="#">Средняя</a></li>
                             <li><a href="#">Большая</a></li>
                         </ul>
                     </div>
-                     <div class="food__item__controls row">
+                     <div class="ui-controls-ingred row">
                         <div class="col-sm-6"><a href="#" class="add-to-dish btn"><i class="icon-plus-circled"></i>Добавить в блюдо</a></div>
 
                         <div class="col-sm-6"> <a href="#" class="remove-from-dish btn"><i class="icon-minus-circled"></i>Убрать из блюда</a></div>
@@ -197,14 +197,14 @@
                     <div class="food__item__ingredients">Бифштекс, лук, помидор, салат латук,
                         помидор, бифштекс, лук.
                     </div>
-                    <div class="food__item__size">
+                    <div class="ui-control-foodsize">
                         <ul>
                             <li class="active"><a href="#">Маленькая</a></li>
                             <li><a href="#">Средняя</a></li>
                             <li><a href="#">Большая</a></li>
                         </ul>
                     </div>
-                     <div class="food__item__controls row">
+                     <div class="ui-controls-ingred row">
                         <div class="col-sm-6"><a href="#" class="add-to-dish btn"><i class="icon-plus-circled"></i>Добавить в блюдо</a></div>
 
                         <div class="col-sm-6"> <a href="#" class="remove-from-dish btn"><i class="icon-minus-circled"></i>Убрать из блюда</a></div>
@@ -232,14 +232,14 @@
                     <div class="food__item__ingredients">Бифштекс, лук, помидор, салат латук,
                         помидор, бифштекс, лук.
                     </div>
-                    <div class="food__item__size">
+                    <div class="ui-control-foodsize">
                         <ul>
                             <li class="active"><a href="#">Маленькая</a></li>
                             <li><a href="#">Средняя</a></li>
                             <li><a href="#">Большая</a></li>
                         </ul>
                     </div>
-                     <div class="food__item__controls row">
+                     <div class="ui-controls-ingred row">
                         <div class="col-sm-6"><a href="#" class="add-to-dish btn"><i class="icon-plus-circled"></i>Добавить в блюдо</a></div>
 
                         <div class="col-sm-6"> <a href="#" class="remove-from-dish btn"><i class="icon-minus-circled"></i>Убрать из блюда</a></div>
@@ -267,14 +267,14 @@
                     <div class="food__item__ingredients">Бифштекс, лук, помидор, салат латук,
                         помидор, бифштекс, лук.
                     </div>
-                    <div class="food__item__size">
+                    <div class="ui-control-foodsize">
                         <ul>
                             <li class="active"><a href="#">Маленькая</a></li>
                             <li><a href="#">Средняя</a></li>
                             <li><a href="#">Большая</a></li>
                         </ul>
                     </div>
-                     <div class="food__item__controls row">
+                     <div class="ui-controls-ingred row">
                         <div class="col-sm-6"><a href="#" class="add-to-dish btn"><i class="icon-plus-circled"></i>Добавить в блюдо</a></div>
 
                         <div class="col-sm-6"> <a href="#" class="remove-from-dish btn"><i class="icon-minus-circled"></i>Убрать из блюда</a></div>
@@ -302,14 +302,14 @@
                     <div class="food__item__ingredients">Бифштекс, лук, помидор, салат латук,
                         помидор, бифштекс, лук.
                     </div>
-                    <div class="food__item__size">
+                    <div class="ui-control-foodsize">
                         <ul>
                             <li class="active"><a href="#">Маленькая</a></li>
                             <li><a href="#">Средняя</a></li>
                             <li><a href="#">Большая</a></li>
                         </ul>
                     </div>
-                     <div class="food__item__controls row">
+                     <div class="ui-controls-ingred row">
                         <div class="col-sm-6"><a href="#" class="add-to-dish btn"><i class="icon-plus-circled"></i>Добавить в блюдо</a></div>
 
                         <div class="col-sm-6"> <a href="#" class="remove-from-dish btn"><i class="icon-minus-circled"></i>Убрать из блюда</a></div>
@@ -337,14 +337,14 @@
                     <div class="food__item__ingredients">Бифштекс, лук, помидор, салат латук,
                         помидор, бифштекс, лук.
                     </div>
-                    <div class="food__item__size">
+                    <div class="ui-control-foodsize">
                         <ul>
                             <li class="active"><a href="#">Маленькая</a></li>
                             <li><a href="#">Средняя</a></li>
                             <li><a href="#">Большая</a></li>
                         </ul>
                     </div>
-                     <div class="food__item__controls row">
+                     <div class="ui-controls-ingred row">
                         <div class="col-sm-6"><a href="#" class="add-to-dish btn"><i class="icon-plus-circled"></i>Добавить в блюдо</a></div>
 
                         <div class="col-sm-6"> <a href="#" class="remove-from-dish btn"><i class="icon-minus-circled"></i>Убрать из блюда</a></div>
@@ -372,14 +372,14 @@
                     <div class="food__item__ingredients">Бифштекс, лук, помидор, салат латук,
                         помидор, бифштекс, лук.
                     </div>
-                    <div class="food__item__size">
+                    <div class="ui-control-foodsize">
                         <ul>
                             <li class="active"><a href="#">Маленькая</a></li>
                             <li><a href="#">Средняя</a></li>
                             <li><a href="#">Большая</a></li>
                         </ul>
                     </div>
-                     <div class="food__item__controls row">
+                     <div class="ui-controls-ingred row">
                         <div class="col-sm-6"><a href="#" class="add-to-dish btn"><i class="icon-plus-circled"></i>Добавить в блюдо</a></div>
 
                         <div class="col-sm-6"> <a href="#" class="remove-from-dish btn"><i class="icon-minus-circled"></i>Убрать из блюда</a></div>
@@ -407,14 +407,14 @@
                     <div class="food__item__ingredients">Бифштекс, лук, помидор, салат латук,
                         помидор, бифштекс, лук.
                     </div>
-                    <div class="food__item__size">
+                    <div class="ui-control-foodsize">
                         <ul>
                             <li class="active"><a href="#">Маленькая</a></li>
                             <li><a href="#">Средняя</a></li>
                             <li><a href="#">Большая</a></li>
                         </ul>
                     </div>
-                    <div class="food__item__controls row">
+                    <div class="ui-controls-ingred row">
                         <div class="col-sm-6"><a href="#" class="add-to-dish btn"><i class="icon-plus-circled"></i>Добавить в блюдо</a></div>
 
                         <div class="col-sm-6"> <a href="#" class="remove-from-dish btn"><i class="icon-minus-circled"></i>Убрать из блюда</a></div>
