--- a/public/cart.html
+++ b/public/cart.html
@@ -37,7 +37,229 @@
     </div>
 </header>
 
+<section id="cart">
+    <div class="container">
+        <div class="cart-nav">Назад к меню</div>
+        <div class="cart__top">
+            <h2 class="pagetitle col-md-6">Корзина</h2>
+            <div class="cart__info col-md-6 text-right">В вашей корзине 4 блюда.</div>
+        </div>
+        <div class="row">
+            <div class="col-lg-6 col-xl-6 cart__item">
 
+                <div class="cart__item__wrapper">
+                    <a href="#" class="cart__item__remove"></a>
+                    <div class="row">
+                        <div class="col-xs-3 col-md-3 cart__item__img">
+                            <img src="./assets/images/food/1.jpg" alt="food" class="img-fluid"/>
+                        </div>
+                        <div class="col-xs-9 col-md-9">
+                            <div class="cart__item__title">1. Пиццони «Маргарита»</div>
+                            <div class="cart__item__info">
+                                <div class="param">
+                                    <div class="param__title">Вес:</div>
+                                    <div class="param__value">850 г.</div>
+                                </div>
+                                <div class="param">
+                                    <div class="param__title">Размер:</div>
+                                    <div class="param__value">средний</div>
+                                </div>
+                                <div class="param__title">Дополнительно:</div>
+                                <div class="param__value">
+                                    <div class="row">
+                                        <div class="col-xs-6 col-md-6">
+                                            <span class="param__tag">Салями  2х  150 ₽  </span>
+                                            <span class="param__tag">Сыр «Моцарелла»  1х  150 ₽   </span>
+                                        </div>
+                                        <div class="col-xs-6 col-md-6">
+                                            <div class="ui-controls-ingred vertical">
+                                                <a href="#" class="add-to-dish btn"><i class="icon-plus-circled"></i>Добавить
+                                                    в блюдо</a>
+                                                <a href="#" class="remove-from-dish btn"><i
+                                                        class="icon-minus-circled"></i>Убрать из блюда</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="cart__item__bottom">
+                        <div class="cart__item__price">499 ₽</div>
+                        <div class="ui-amount-control vertical">
+                            <button class="minus-one-btn"><i class="icon-minus"></i></button>
+                            <span class="ui-amount-control__value">1</span>
+                            <button class="plus-one-btn"><i class="icon-plus"></i></button>
+                        </div>
+                    </div>
+                </div>
+            </div><!-- /cart__item -->
+            <div class="col-lg-6 col-xl-6 cart__item">
+
+                <div class="cart__item__wrapper">
+                    <a href="#" class="cart__item__remove"></a>
+                    <div class="row">
+                        <div class="col-xs-3 col-md-3 cart__item__img">
+                            <img src="./assets/images/food/1.jpg" alt="food" class="img-fluid"/>
+                        </div>
+                        <div class="col-xs-9 col-md-9">
+                            <div class="cart__item__title">1. Пиццони «Маргарита»</div>
+                            <div class="cart__item__info">
+                                <div class="param">
+                                    <div class="param__title">Вес:</div>
+                                    <div class="param__value">850 г.</div>
+                                </div>
+                                <div class="param">
+                                    <div class="param__title">Размер:</div>
+                                    <div class="param__value">средний</div>
+                                </div>
+                                <div class="param__title">Дополнительно:</div>
+                                <div class="param__value">
+                                    <div class="row">
+                                        <div class="col-xs-6 col-md-6">
+                                            <span class="param__tag">Салями  2х  150 ₽  </span>
+                                            <span class="param__tag">Сыр «Моцарелла»  1х  150 ₽   </span>
+                                        </div>
+                                        <div class="col-xs-6 col-md-6">
+                                            <div class="ui-controls-ingred vertical">
+                                                <a href="#" class="add-to-dish btn"><i class="icon-plus-circled"></i>Добавить
+                                                    в блюдо</a>
+                                                <a href="#" class="remove-from-dish btn"><i
+                                                        class="icon-minus-circled"></i>Убрать из блюда</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="cart__item__bottom">
+                        <div class="cart__item__price">499 ₽</div>
+                        <div class="ui-amount-control vertical">
+                            <button class="minus-one-btn"><i class="icon-minus"></i></button>
+                            <span class="ui-amount-control__value">1</span>
+                            <button class="plus-one-btn"><i class="icon-plus"></i></button>
+                        </div>
+                    </div>
+                </div>
+            </div><!-- /cart__item -->
+            <div class="col-lg-6 col-xl-6 cart__item">
+
+                <div class="cart__item__wrapper">
+                    <a href="#" class="cart__item__remove"></a>
+                    <div class="row">
+                        <div class="col-xs-3 col-md-3 cart__item__img">
+                            <img src="./assets/images/food/1.jpg" alt="food" class="img-fluid"/>
+                        </div>
+                        <div class="col-xs-9 col-md-9">
+                            <div class="cart__item__title">1. Пиццони «Маргарита»</div>
+                            <div class="cart__item__info">
+                                <div class="param">
+                                    <div class="param__title">Вес:</div>
+                                    <div class="param__value">850 г.</div>
+                                </div>
+                                <div class="param">
+                                    <div class="param__title">Размер:</div>
+                                    <div class="param__value">средний</div>
+                                </div>
+                                <div class="param__title">Дополнительно:</div>
+                                <div class="param__value">
+                                    <div class="row">
+                                        <div class="col-xs-6 col-md-6">
+                                            <span class="param__tag">Салями  2х  150 ₽  </span>
+                                            <span class="param__tag">Сыр «Моцарелла»  1х  150 ₽   </span>
+                                        </div>
+                                        <div class="col-xs-6 col-md-6">
+                                            <div class="ui-controls-ingred vertical">
+                                                <a href="#" class="add-to-dish btn"><i class="icon-plus-circled"></i>Добавить
+                                                    в блюдо</a>
+                                                <a href="#" class="remove-from-dish btn"><i
+                                                        class="icon-minus-circled"></i>Убрать из блюда</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="cart__item__bottom">
+                        <div class="cart__item__price">499 ₽</div>
+                        <div class="ui-amount-control vertical">
+                            <button class="minus-one-btn"><i class="icon-minus"></i></button>
+                            <span class="ui-amount-control__value">1</span>
+                            <button class="plus-one-btn"><i class="icon-plus"></i></button>
+                        </div>
+                    </div>
+                </div>
+            </div><!-- /cart__item -->
+            <div class="col-lg-6 col-xl-6 cart__item">
+
+                <div class="cart__item__wrapper">
+                    <a href="#" class="cart__item__remove"></a>
+                    <div class="row">
+                        <div class="col-xs-3 col-md-3 cart__item__img">
+                            <img src="./assets/images/food/1.jpg" alt="food" class="img-fluid"/>
+                        </div>
+                        <div class="col-xs-9 col-md-9">
+                            <div class="cart__item__title">1. Пиццони «Маргарита»</div>
+                            <div class="cart__item__info">
+                                <div class="param">
+                                    <div class="param__title">Вес:</div>
+                                    <div class="param__value">850 г.</div>
+                                </div>
+                                <div class="param">
+                                    <div class="param__title">Размер:</div>
+                                    <div class="param__value">средний</div>
+                                </div>
+                                <div class="param__title">Дополнительно:</div>
+                                <div class="param__value">
+                                    <div class="row">
+                                        <div class="col-xs-6 col-md-6">
+                                            <span class="param__tag">Салями  2х  150 ₽  </span>
+                                            <span class="param__tag">Сыр «Моцарелла»  1х  150 ₽   </span>
+                                        </div>
+                                        <div class="col-xs-6 col-md-6">
+                                            <div class="ui-controls-ingred vertical">
+                                                <a href="#" class="add-to-dish btn"><i class="icon-plus-circled"></i>Добавить
+                                                    в блюдо</a>
+                                                <a href="#" class="remove-from-dish btn"><i
+                                                        class="icon-minus-circled"></i>Убрать из блюда</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="cart__item__bottom">
+                        <div class="cart__item__price">499 ₽</div>
+                        <div class="ui-amount-control vertical">
+                            <button class="minus-one-btn"><i class="icon-minus"></i></button>
+                            <span class="ui-amount-control__value">1</span>
+                            <button class="plus-one-btn"><i class="icon-plus"></i></button>
+                        </div>
+                    </div>
+                </div>
+            </div><!-- /cart__item -->
+        </div>
+    </div>
+</section>
+
+<section id="drinks-offer">
+    <div class="container">
+
+    </div>
+</section>
+
+<section id="checkout">
+    <div class="container">
+
+    </div>
+</section>
 
 <footer class="footer">
     <div class="container">
