--- a/public/index.html
+++ b/public/index.html
@@ -99,14 +99,14 @@
                     <div class="food__item__ingredients">Бифштекс, лук, помидор, салат латук,
                         помидор, бифштекс, лук.
                     </div>
-                    <div class="food__item__size">
+                    <div class="ui-control-foodsize">
                         <ul>
                             <li class="active"><a href="#">Маленькая</a></li>
                             <li><a href="#">Средняя</a></li>
                             <li><a href="#">Большая</a></li>
                         </ul>
                     </div>
-                     <div class="food__item__controls row">
+                     <div class="ui-controls-ingred row">
                         <div class="col-sm-6"><a href="#" class="add-to-dish btn"><i class="icon-plus-circled"></i>Добавить в блюдо</a></div>
 
                         <div class="col-sm-6"> <a href="#" class="remove-from-dish btn"><i class="icon-minus-circled"></i>Убрать из блюда</a></div>
@@ -134,14 +134,14 @@
                     <div class="food__item__ingredients">Бифштекс, лук, помидор, салат латук,
                         помидор, бифштекс, лук.
                     </div>
-                    <div class="food__item__size">
+                    <div class="ui-control-foodsize">
                         <ul>
                             <li class="active"><a href="#">Маленькая</a></li>
                             <li><a href="#">Средняя</a></li>
                             <li><a href="#">Большая</a></li>
                         </ul>
                     </div>
-                     <div class="food__item__controls row">
+                     <div class="ui-controls-ingred row">
                         <div class="col-sm-6"><a href="#" class="add-to-dish btn"><i class="icon-plus-circled"></i>Добавить в блюдо</a></div>
 
                         <div class="col-sm-6"> <a href="#" class="remove-from-dish btn"><i class="icon-minus-circled"></i>Убрать из блюда</a></div>
@@ -169,14 +169,14 @@
                     <div class="food__item__ingredients">Бифштекс, лук, помидор, салат латук,
                         помидор, бифштекс, лук.
                     </div>
-                    <div class="food__item__size">
+                    <div class="ui-control-foodsize">
                         <ul>
                             <li class="active"><a href="#">Маленькая</a></li>
                             <li><a href="#">Средняя</a></li>
                             <li><a href="#">Большая</a></li>
                         </ul>
                     </div>
-                     <div class="food__item__controls row">
+                     <div class="ui-controls-ingred row">
                         <div class="col-sm-6"><a href="#" class="add-to-dish btn"><i class="icon-plus-circled"></i>Добавить в блюдо</a></div>
 
                         <div class="col-sm-6"> <a href="#" class="remove-from-dish btn"><i class="icon-minus-circled"></i>Убрать из блюда</a></div>
@@ -192,9 +192,9 @@
                             </div>
                             <div class="col-lg-5 col-xl-5 padding0 text-right">
                                 <button class="food__item__btn btn btn-add-to-cart hide">В корзину</button>
-                                <div class="food__item__amount">
+                                <div class="food__item__amount ui-amount-control">
                                     <button class="minus-one-btn"><i class="icon-minus"></i></button>
-                                    <span class="food__item__amount__value">1</span>
+                                    <span class="ui-amount-control__value">1</span>
                                     <button class="plus-one-btn"><i class="icon-plus"></i></button>
                                 </div>
                             </div>
@@ -209,14 +209,14 @@
                     <div class="food__item__ingredients">Бифштекс, лук, помидор, салат латук,
                         помидор, бифштекс, лук.
                     </div>
-                    <div class="food__item__size">
+                    <div class="ui-control-foodsize">
                         <ul>
                             <li class="active"><a href="#">Маленькая</a></li>
                             <li><a href="#">Средняя</a></li>
                             <li><a href="#">Большая</a></li>
                         </ul>
                     </div>
-                     <div class="food__item__controls row">
+                     <div class="ui-controls-ingred row">
                         <div class="col-sm-6"><a href="#" class="add-to-dish btn"><i class="icon-plus-circled"></i>Добавить в блюдо</a></div>
 
                         <div class="col-sm-6"> <a href="#" class="remove-from-dish btn"><i class="icon-minus-circled"></i>Убрать из блюда</a></div>
@@ -244,14 +244,14 @@
                     <div class="food__item__ingredients">Бифштекс, лук, помидор, салат латук,
                         помидор, бифштекс, лук.
                     </div>
-                    <div class="food__item__size">
+                    <div class="ui-control-foodsize">
                         <ul>
                             <li class="active"><a href="#">Маленькая</a></li>
                             <li><a href="#">Средняя</a></li>
                             <li><a href="#">Большая</a></li>
                         </ul>
                     </div>
-                     <div class="food__item__controls row">
+                     <div class="ui-controls-ingred row">
                         <div class="col-sm-6"><a href="#" class="add-to-dish btn"><i class="icon-plus-circled"></i>Добавить в блюдо</a></div>
 
                         <div class="col-sm-6"> <a href="#" class="remove-from-dish btn"><i class="icon-minus-circled"></i>Убрать из блюда</a></div>
@@ -279,14 +279,14 @@
                     <div class="food__item__ingredients">Бифштекс, лук, помидор, салат латук,
                         помидор, бифштекс, лук.
                     </div>
-                    <div class="food__item__size">
+                    <div class="ui-control-foodsize">
                         <ul>
                             <li class="active"><a href="#">Маленькая</a></li>
                             <li><a href="#">Средняя</a></li>
                             <li><a href="#">Большая</a></li>
                         </ul>
                     </div>
-                     <div class="food__item__controls row">
+                     <div class="ui-controls-ingred row">
                         <div class="col-sm-6"><a href="#" class="add-to-dish btn"><i class="icon-plus-circled"></i>Добавить в блюдо</a></div>
 
                         <div class="col-sm-6"> <a href="#" class="remove-from-dish btn"><i class="icon-minus-circled"></i>Убрать из блюда</a></div>
@@ -314,14 +314,14 @@
                     <div class="food__item__ingredients">Бифштекс, лук, помидор, салат латук,
                         помидор, бифштекс, лук.
                     </div>
-                    <div class="food__item__size">
+                    <div class="ui-control-foodsize">
                         <ul>
                             <li class="active"><a href="#">Маленькая</a></li>
                             <li><a href="#">Средняя</a></li>
                             <li><a href="#">Большая</a></li>
                         </ul>
                     </div>
-                     <div class="food__item__controls row">
+                     <div class="ui-controls-ingred row">
                         <div class="col-sm-6"><a href="#" class="add-to-dish btn"><i class="icon-plus-circled"></i>Добавить в блюдо</a></div>
 
                         <div class="col-sm-6"> <a href="#" class="remove-from-dish btn"><i class="icon-minus-circled"></i>Убрать из блюда</a></div>
@@ -349,14 +349,14 @@
                     <div class="food__item__ingredients">Бифштекс, лук, помидор, салат латук,
                         помидор, бифштекс, лук.
                     </div>
-                    <div class="food__item__size">
+                    <div class="ui-control-foodsize">
                         <ul>
                             <li class="active"><a href="#">Маленькая</a></li>
                             <li><a href="#">Средняя</a></li>
                             <li><a href="#">Большая</a></li>
                         </ul>
                     </div>
-                     <div class="food__item__controls row">
+                     <div class="ui-controls-ingred row">
                         <div class="col-sm-6"><a href="#" class="add-to-dish btn"><i class="icon-plus-circled"></i>Добавить в блюдо</a></div>
 
                         <div class="col-sm-6"> <a href="#" class="remove-from-dish btn"><i class="icon-minus-circled"></i>Убрать из блюда</a></div>
@@ -384,14 +384,14 @@
                     <div class="food__item__ingredients">Бифштекс, лук, помидор, салат латук,
                         помидор, бифштекс, лук.
                     </div>
-                    <div class="food__item__size">
+                    <div class="ui-control-foodsize">
                         <ul>
                             <li class="active"><a href="#">Маленькая</a></li>
                             <li><a href="#">Средняя</a></li>
                             <li><a href="#">Большая</a></li>
                         </ul>
                     </div>
-                     <div class="food__item__controls row">
+                     <div class="ui-controls-ingred row">
                         <div class="col-sm-6"><a href="#" class="add-to-dish btn"><i class="icon-plus-circled"></i>Добавить в блюдо</a></div>
 
                         <div class="col-sm-6"> <a href="#" class="remove-from-dish btn"><i class="icon-minus-circled"></i>Убрать из блюда</a></div>
@@ -419,14 +419,14 @@
                     <div class="food__item__ingredients">Бифштекс, лук, помидор, салат латук,
                         помидор, бифштекс, лук.
                     </div>
-                    <div class="food__item__size">
+                    <div class="ui-control-foodsize">
                         <ul>
                             <li class="active"><a href="#">Маленькая</a></li>
                             <li><a href="#">Средняя</a></li>
                             <li><a href="#">Большая</a></li>
                         </ul>
                     </div>
-                     <div class="food__item__controls row">
+                     <div class="ui-controls-ingred row">
                         <div class="col-sm-6"><a href="#" class="add-to-dish btn"><i class="icon-plus-circled"></i>Добавить в блюдо</a></div>
 
                         <div class="col-sm-6"> <a href="#" class="remove-from-dish btn"><i class="icon-minus-circled"></i>Убрать из блюда</a></div>
@@ -454,14 +454,14 @@
                     <div class="food__item__ingredients">Бифштекс, лук, помидор, салат латук,
                         помидор, бифштекс, лук.
                     </div>
-                    <div class="food__item__size">
+                    <div class="ui-control-foodsize">
                         <ul>
                             <li class="active"><a href="#">Маленькая</a></li>
                             <li><a href="#">Средняя</a></li>
                             <li><a href="#">Большая</a></li>
                         </ul>
                     </div>
-                     <div class="food__item__controls row">
+                     <div class="ui-controls-ingred row">
                         <div class="col-sm-6"><a href="#" class="add-to-dish btn"><i class="icon-plus-circled"></i>Добавить в блюдо</a></div>
 
                         <div class="col-sm-6"> <a href="#" class="remove-from-dish btn"><i class="icon-minus-circled"></i>Убрать из блюда</a></div>
@@ -489,14 +489,14 @@
                     <div class="food__item__ingredients">Бифштекс, лук, помидор, салат латук,
                         помидор, бифштекс, лук.
                     </div>
-                    <div class="food__item__size">
+                    <div class="ui-control-foodsize">
                         <ul>
                             <li class="active"><a href="#">Маленькая</a></li>
                             <li><a href="#">Средняя</a></li>
                             <li><a href="#">Большая</a></li>
                         </ul>
                     </div>
-                    <div class="food__item__controls row">
+                    <div class="ui-controls-ingred row">
                         <div class="col-sm-6"><a href="#" class="add-to-dish btn"><i class="icon-plus-circled"></i>Добавить в блюдо</a></div>
 
                         <div class="col-sm-6"> <a href="#" class="remove-from-dish btn"><i class="icon-minus-circled"></i>Убрать из блюда</a></div>
